--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "axios": "^1.10.0",
     "chart.js": "^4.5.0",
     "formik": "^2.4.6",
     "next": "15.3.4",
